Create Position Report

--- a/BuildingEscape/Config/DefaultGame.ini
+++ b/BuildingEscape/Config/DefaultGame.ini
@@ -1,5 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=B9357865714CD673856BF9B7248D6328
+CompanyName=CK Interactive
+CompanyDistinguishedName=Chris Keithley
+CopyrightNotice=Copyright Christopher Keithley 2016
 
 [StartupActions]
 bAddPacks=True
